# calico-doom

./: CMakeLists.txt
cmake/Modules/: FindSDL2.cmake  FindSDL2_mixer.cmake
src/: CMakeLists.txt  jagonly.c  p_tick.c  s_sound.c
src/gl/: gl_textures.cpp
src/posix/: posix_main.c  posix_platform.cpp  posix_platform.h
src/sdl/: sdl_sound.cpp  sdl_video.cpp
